Make RollingAppenderCronOnceADayTest less sleepy
Now this test takes several seconds to run rather than a minute.

Relates to LOG4J2-2923.

Signed-off-by: Matt Sicker <mattsicker@apache.org>